sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:16: error: type mismatch;
 found   : Unit
 required: Boolean
while(col=true){
         ^