sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
var col :Boolean =true
def tri(){
	for(i<- 0 to 8){
		
		var j:Int = i+1
		if(!plusPetit(i,j)){
			echange(i,j)
			}
		else{col=false}
		
	}
}

def bubbleSort()  {
while(col=true){
	tri()
}
}
